--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-sessions": "^1.0.6",
+    "heroku": "^7.35.0",
     "nodemon": "^2.0.1"
   }
 }
